--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -34,6 +34,7 @@
     "apexcharts": "3.46.0",
     "dayjs": "1.11.10",
     "next": "^14.2.3",
+    "node": "^22.1.0",
     "react": "^18.3.1",
     "react-apexcharts": "1.4.1",
     "react-dom": "^18.3.1",
